--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 REACT_APP_NODE_SERVER_BASE_URL='http://localhost:8000/'
-REACT_APP_NODE_SERVER_FETCH_PLAN_URL='http://localhost:8000/planRecommendation35'
+REACT_APP_FETCH_INVENTORY_URL='http://localhost:8000/inventoryBns35'
+REACT_APP_CART_URL='http://localhost:8000/cartBns35'
+REACT_APP_CHECKOUT_URL='http://localhost:8000/cartBns35/checkout'
